# GenomicsDB-Python

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  install_genomicsdbformac.sh  install_genomicsdbforwheel.sh  install_openssl3.sh  install_prereqs.sh  install_prereqs_mac.sh  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_pkg.txt  setup.py
.github/scripts/: azurite.sh  install_prereqs.sh  setup_azurite.sh
.github/workflows/: basic.yml  release.yml
docs/: Makefile  conf.py  genomicsdb.rst  index.rst  modules.rst
examples/: README.md  genomicsdb_cache  genomicsdb_common.py  genomicsdb_query  run.sh  test.sh
genomicsdb/: __init__.py
genomicsdb/protobuf/: README.md  genomicsdb_callsets_mapping_pb2.py  genomicsdb_coordinates_pb2.py  genomicsdb_export_config_pb2.py  genomicsdb_import_config_pb2.py  genomicsdb_vid_mapping_pb2.py
genomicsdb/scripts/: README.md  genomicsdb_cache.py  genomicsdb_common.py  genomicsdb_query.py
package/: Dockerfile  README.md  docker-compose.yml  publish_package.sh  publish_package_local.sh  requirements_pkg.txt
package/scripts/: create_package.sh  delocate_wheel_local.sh  install_genomicsdb.sh  install_prereqs_for_wheels.sh  install_python.sh  install_python_local.sh
src/: __init__.py  genomicsdb.cpp  genomicsdb.pxd  genomicsdb.pyx  genomicsdb_arrow_utils.cpp  genomicsdb_processor.cpp  genomicsdb_processor.h  genomicsdb_processor_columnar.cpp  utils.pxd  utils.pxi  utils.pyx
test/: test.py  test_filesystem_api.py  test_genomicsdb.py  test_genomicsdb_demo.py
test/inputs/: sanity.test.tgz
test/scripts/: examples_ws.tgz  genomicsdb_cache  genomicsdb_query  test.sh
