[build-system]
requires = ["setuptools", "wheel", "Cython","numpy","protobuf"]
[tool.cibuildwheel]
before-all = "bash package/scripts/install_prereqs_for_wheels.sh"
before-build = [
"pip install -r requirements_dev.txt",
]
test-command = "python {project}/test/test.py {project}/test/inputs/sanity.test.tgz"
[tool.cibuildwheel.linux]
environment = { LD_LIBRARY_PATH="/usr/local/lib64:/usr/local/lib:$LD_LIBRARY_PATH", OPENSSL_ROOT_DIR="/usr/local"}
skip = "pp* *-manylinux_i686 *_ppc64le *_s390x *musll*"
repair-wheel-command = "DEST=`awk -F'/' '{ a = length($NF) ? $NF : $(NF-1); print a }' <<< {wheel}` && mv {wheel} {dest_dir} && mv {dest_dir}/${DEST} {dest_dir}/${DEST//-linux_/-manylinux_2_17_x86_64.manylinux2014_}"
[tool.cibuildwheel.macos]
skip = "pp*"